# forge

./: .forge.example.yaml  .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
css/: style.css
docs/js/: main.js
examples/: README.md
forge/: __init__.py  __main__.py  cli.py  config.py  plugins.py  session.py
forge/core/: __init__.py  agent.py  ast_editor.py  context.py  context_window.py  error_recovery.py  git_workflow.py  indexer.py  intelligent_agent.py  knowledge_graph.py  memory.py  planner.py  react_agent.py  watcher.py
forge/generators/: __init__.py  ci_generator.py  component_generator.py  docker_generator.py  project_generator.py  test_generator.py
forge/llm/: __init__.py  base.py
forge/llm/providers/: __init__.py  anthropic_provider.py  llamafile_provider.py  lmstudio_provider.py  ollama_provider.py  (+2 more)
forge/parsers/: __init__.py  base.py  c_parser.py  cpp_parser.py  css_parser.py  go_parser.py  html_parser.py  java_parser.py  javascript_parser.py  json_parser.py  kotlin_parser.py  markdown_parser.py  php_parser.py  python_parser.py  ruby_parser.py  rust_parser.py  scala_parser.py  shell_parser.py  sql_parser.py  swift_parser.py  typescript_parser.py  yaml_parser.py
forge/plugins/: __init__.py  hooks.py  loader.py
forge/refactor/: __init__.py  engine.py
forge/security/: __init__.py  scanner.py
forge/tools/: __init__.py  advanced.py  backlinks.py  builtin.py  graph_tools.py  registry.py
forge/tui/: __init__.py  app.py  display.py
tests/: __init__.py  test_basic.py  test_core.py
