[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-coding"
version = "0.1.0"
description = "The agentic coding tool that actually works. 100% local. Zero cloud."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "coding", "agent", "llm", "local", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0",
    "httpx>=0.25",
    "click>=8.0",
    "pyyaml>=6.0",
    "gitpython>=3.1",
    "prompt_toolkit>=3.0",
    "pygments>=2.14",
    "tiktoken>=0.5",
    "watchdog>=3.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[project.scripts]
forge = "forge.cli:main"

[project.urls]
Homepage = "https://github.com/your-username/forge"
Repository = "https://github.com/your-username/forge"
Issues = "https://github.com/your-username/forge/issues"

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.ruff]
line-length = 100
target-version = "py310"
